--- a/sjtuthesis.cfg
+++ b/sjtuthesis.cfg
@@ -121,7 +121,7 @@
 %%
 %% the theorem name definitions
 %%
-\def\sjtu@label@algo{算法}
+\def\sjtu@label@algo{Algorithm}
 \def\sjtu@label@thm{定理}
 \def\sjtu@label@lem{引理}
 \def\sjtu@label@prop{命题}
